samples/_failures_safe/1761473878_c1ccfc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f4b3ce8.c: In function ‘main’:
./samples/SAFE/__tmp_9f4b3ce8.c:138:5: error: expected ‘,’ or ‘;’ at end of input
  138 |     int found = 0
      |     ^~~
./samples/SAFE/__tmp_9f4b3ce8.c:138:5: error: expected declaration or statement at end of input
